# Grade.AI

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE3_IMPLEMENTATION.md  PHASE3_TESTING.md  README.md  diagnose-documents.sql  diagnose-system.bat  diagnose-system.sh  docker-compose.ci.yml  docker-compose.yml  minio-cors.json  s3-cors-config.json  setup-minio.bat  setup-minio.sh
backend/: Dockerfile  pyproject.toml  requirements.txt  test_minio.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_join_code_and_assignment_is_active.py  003_fix_rubric_weight.py  004_add_processing_status.py  87b46a5f2d9c_add_file_key_column_to_documents.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/core/: config.py  deps.py  enums.py  exceptions.py  handlers.py  lifespan.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  session.py  sync_session.py  types.py
backend/app/infrastructure/: __init__.py  chromadb_client.py  redis_client.py
backend/app/models/: __init__.py  assignment.py  audit_log.py  course.py  document.py  document_chunk.py  enrollment.py  evaluation.py  mixins.py  rubric.py  submission.py  user.py
backend/app/rag/: __init__.py  chunker.py  embeddings.py  evaluator.py  parsers.py  retrieval.py
backend/app/schemas/: __init__.py  assignment.py  course.py  user.py  (+6 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  fake_redis.py  test_auth.py  test_config.py  test_enums.py  test_exceptions.py  test_health.py  test_security.py  test_stubs.py
(+83 files in other folders)
