[project]
name = "gradeai-backend"
version = "0.1.0"
description = "GradeAI FastAPI backend"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "C4", "SIM",
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
packages = ["app"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/models/*",
    "app/tasks/*",
    "app/celery_app.py",
    "app/api/v1/endpoints/courses.py",
    "app/api/v1/endpoints/assignments.py",
    "app/api/v1/endpoints/submissions.py",
    "app/api/v1/endpoints/uploads.py",
    "app/api/v1/endpoints/evaluations.py",
    "app/api/v1/endpoints/analytics.py",
    "app/services/s3_service.py",
    "app/infrastructure/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
